--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-PyPDF2
 sentence-transformers
-torch
-faiss
-numpy
-pickle
+langchain-ollama
 python-dotenv
+faiss-cpu
+langchain
+flask-cors
+pymongo
+PyPDF2
+torch
+numpy
 flask
 boto3
-langchain
-langchain-ollama
-pymongo
-flask-cors
 tqdm
 shutil
